# lightyear

./: .gitignore  Cargo.toml
.github/workflows/: servers.yaml  wasm.yaml
benches/: Cargo.toml
examples/: Cargo.toml  Dockerfile.server  README.md  build_wasm.sh  example_list.env
examples/auth2/: Cargo.toml  README.md
examples/auth2/src/: client.rs  main.rs  name_generator.rs  server.rs  token_client.rs  token_server.rs
examples/avian_3d_character/: Cargo.toml
examples/certificates/: cert.pem  key.pem
examples/common/: Cargo.toml
examples/common/src/: app.rs  bevygap_shared.rs  lib.rs  renderer.rs  settings.rs  shared.rs
examples/common/www/: index.html
examples/launcher/: Cargo.toml
examples/launcher/src/: main.rs
examples/lobby/src/: main.rs
examples/simple_box/: Cargo.toml
examples/simple_box/assets/: settings.ron
examples/simple_box/src/: main.rs  renderer.rs  server.rs
examples/spaceships/: Cargo.toml
examples/spaceships/assets/: settings.ron
examples/spaceships/src/: client.rs  main.rs  renderer.rs  server.rs  shared.rs
examples/xpbd_physics/src/: client.rs
lightyear/: Cargo.toml
lightyear/src/client/prediction/: rollback.rs
lightyear/src/connection/: client.rs
lightyear/src/utils/: avian3d.rs
macros/: Cargo.toml
