[workspace]
members = ["common", "spaceships"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
publish = false

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# If your own code does CPU-intensive work, you might want to also enable some optimization for it.
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Here is a configuration for the most aggressive optimizations possible
# Read this when trying to optimise WASM build: https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[workspace.dependencies]
lightyear_examples_common = {path = "./lightyear_examples_common", default-features = false}
lightyear = { path = "../lightyear", default-features = false }
anyhow = { version = "1.0.75", features = [] }
async-compat = "0.2.3"
cfg-if = "1.0.0"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam-channel = "0.5.12"
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
metrics-exporter-prometheus = { version = "0.16" }
# bevy, without defaults - we add back features needed for gui clients if desired
bevy = { version = "0.14", default-features = false, features = [
  "multi_threaded",
  "bevy_state",
  "serialize",
  "bevy_asset",
  "bevy_state",
  "bevy_color",
  "multi_threaded",
  "sysinfo_plugin",
  
] }
leafwing-input-manager = {version = "0.15", default-features = false, features = ["mouse", "keyboard"]}
avian2d = { version = "0.1.1", default-features = false } 
bevy-inspector-egui = {version = "0.27"}
bevy_screen_diagnostics = {version = "0.6"}

[workspace.lints.clippy]
type_complexity = "allow"


