[package]
name = "lightyear_examples_common"
version = "0.17.0"
authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
edition = "2021"
rust-version = "1.76"
description = "Common harness for the lightyear examples"
readme = "../README.md"
repository = "https://github.com/cBournhonesque/lightyear"
keywords = ["bevy", "multiplayer", "networking", "netcode", "gamedev"]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
exclude = ["/tests"]

[features]
default = ["steam", "webtransport", "websocket", "client", "server", "gui"]
steam = ["lightyear/steam"]
webtransport = ["lightyear/webtransport"]
websocket = ["lightyear/websocket"]
server = []
client = ["gui"]
#inspector = ["gui", "dep:bevy-inspector-egui"]
gui = [
    "bevy/bevy_asset",
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_gizmos",
    "bevy/tonemapping_luts",
    "bevy/smaa_luts",
    "bevy/default_font",
    "bevy/png",
    "bevy/hdr",
    "bevy/x11",
    "bevy/webgl2",
    "bevy/bevy_winit",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
]

[dependencies]
lightyear.workspace = true
anyhow.workspace = true
async-compat.workspace = true
cfg-if.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
rand.workspace = true
serde.workspace = true
bevy.workspace = true
#bevy-inspector-egui = {workspace = true, optional = true}

[lints]
workspace = true