[package]
name = "simple_box"
version = "0.1.0"
authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
edition = "2021"
rust-version = "1.65"
description = "Examples for the lightyearServer-client networking library for the Bevy game engine"
readme = "README.md"
repository = "https://github.com/cBournhonesque/lightyear"
keywords = ["bevy", "multiplayer", "networking", "netcode", "gamedev"]
categories = ["game-development", "network-programming"]
license = "MIT OR Apache-2.0"
publish = false

[features]
metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]

[dependencies]
lightyear_examples_common = {workspace = true, default-features = true}
lightyear = {workspace = true, features = [
  "steam",
  "webtransport",
  "websocket",
] }
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bevy.workspace = true
bevy_mod_picking = { version = "0.20", features = ["backend_bevy_ui"] }
rand.workspace = true
metrics-exporter-prometheus = {workspace = true, optional = true}
bevy-inspector-egui.workspace = true
