[package]
name = "spaceships"
version = "0.0.0"
authors = [
  "Charles Bournhonesque <charlesbour@gmail.com>",
  "Richard Jones <rj@metabrew.com>",
]
edition = "2021"
rust-version = "1.76"
publish = false

[features]
default = ["server"]
metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
client = ["lightyear_examples_common/client", "dep:bevy_screen_diagnostics", "gui"]
gui = ["lightyear_examples_common/gui"]
server = ["lightyear_examples_common/server"]

[dependencies]
lightyear_examples_common = { path = "../common", default-features = false, features = ["server", "webtransport", "websocket"] }
bevy_screen_diagnostics = {workspace = true, optional = true}
leafwing-input-manager.workspace = true
avian2d = { workspace = true, features = [
  "2d",
  "f32",
  "parry-f32",
  "parallel",
  "serialize",
] }
lightyear = { workspace = true,  features = [
  "webtransport",
  "leafwing",
  "avian2d",
] }
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bevy.workspace = true
rand.workspace = true
metrics-exporter-prometheus = { workspace = true, optional = true }

[lints.clippy]
type_complexity = "allow"
