[package]
name = "spaceships"
version = "0.0.0"
authors = [
  "Charles Bournhonesque <charlesbour@gmail.com>",
  "Richard Jones <rj@metabrew.com>",
]
edition = "2021"
rust-version = "1.76"
publish = false

[features]
default = ["server", "client"]
metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
client = ["lightyear_examples_common/client", "dep:bevy_screen_diagnostics", "gui"]
gui = ["lightyear_examples_common/gui", "dep:bevy_screen_diagnostics"]
server = ["lightyear_examples_common/server"]

[dependencies]
lightyear_examples_common.workspace = true
bevy_screen_diagnostics = {workspace = true, optional = true}
metrics-exporter-prometheus = { workspace = true, optional = true }
leafwing-input-manager.workspace = true
avian2d = { workspace = true, features = [
  "2d",
  "f32",
  "parry-f32",
  "parallel",
  "serialize",
] }
lightyear = { workspace = true,  features = [
  "leafwing",
  "avian2d",
] }
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bevy.workspace = true
rand.workspace = true

[lints]
workspace = true
